# liulianmao

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  ls.py  objects.inv  pre_build_process.py  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: sphinx.yml
demo/detect_spam/: spam_test.py
demo/docstring/: template.txt
demo/nekogirl/: template_assistant.txt  template_bypass.txt
demo/pseudo_agent/: question_beijing_weather.txt  template_judge.txt
docs/: MANUAL.md  Makefile  README.md  architecture_whitepaper.md  conf.py  index.rst
llm_unified_client/telegram_antispam/telegram_chat_corpus/: README.md  sentence.test.json  sentence.train.json
llm_unified_client/telegram_antispam/telegram_llm_police/: api.conf  openai_utils.py  sentence.json  spam_test.py  template.txt
src/: README.md  __main__.py  a.txt  authentication.py  client.py  client_api.py  client_langchain.py  langchain_client.py  log.py  model.py  openai_utils.py  question.txt  requirements.txt  storage.py  tab_answer.txt  tab_conf.conf  tab_conf.json
src/assets/: config.json
src/feature/chengyu/: template.txt
src/feature/detect_spam/: spam_test.py
src/liulianmao/: __init__.py  __main__.py  client_core.py  const.py
src/liulianmao/client/: core.py  langchain.py
src/liulianmao/client/agent/: __init__.py  agent_judge.py
src/liulianmao/client/agent/utils/: website.py
src/liulianmao/client/api/: README.md  __init__.py  liulianmao.py  llama.py  openai.py  zhipu.py
src/liulianmao/client/pseudo_agent/: __init__.py  geo.py  search.py  traffic_jam.py  weather.py  website.py
src/liulianmao/client/sdk/: openai.py  zhipu.py
src/liulianmao/client/utils/: __init__.py  agent.py  config.py  file.py  geo.py  local.py  search.py  traffic_jam.py  weather.py  website.py
src/liulianmao/module/: __init__.py  authentication.py  config.py  const.py  model.py  runtime.py  storage.py  sync.py
src/liulianmao/tool/: continuous_chat.py  oneline.py  translator_gui.py  tts.py
src/llmuc/: __main__.py  client_api.py
src/llmuc/module/: log.py  storage.py
src/module/: authentication.py  const.py  log.py  storage.py
