[tool.poetry]
name = "liulianmao"
# 鼠宝是用啥IDE开发的，git clone后用PyCharm打开，
# pycharm自动检测并生成 poetry 环境时，会报错：
# __LIULIANMAO_VERSION__ 啥的
# 去掉这个替换机制相关的文件后就能自动创建环境了
version = "2.2.0"
description = "A LLM client for use from the command line or IDE."
authors = ["快乐的老鼠宝宝 <laoshubaby@protonmail.com>"]
license = "MIT"
repository = "https://github.com/LaoshuBaby/liulianmao"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{ include = "liulianmao", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.11,<4.0"
requests = ">=2.26.0"
loguru = ">=0.5.3"
hellologger = "*"
toml = "^0.10.2"

[tool.poetry.extras]
langchain_support = ["langchain", "langchain_openai"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
